WebCore:

2009-07-14  Ryosuke Niwa  <rniwa@google.com>

        Reviewed by Eric Seidel.

        Outdenting a line inside a blockquote tag does nothing
        https://bugs.webkit.org/show_bug.cgi?id=25316

        The bug was caused by the code checking whether the blockquote is created by WebKit or not.
        We simply remove this code to be consistent with Firefox and Internet Explorer.
        Also, enclosingBlockFlow == enclosingNode in outdentParagraph isn't a sufficient condition to insert
        the placeholder before the enclosingNode because there could be contents before the current paragraph.
        Instead, we should split the enclosingNode (which is a blockquote) at the starting position of outdentation.
        It turned out that this solves the bug 25315 also: https://bugs.webkit.org/show_bug.cgi?id=25315

        Test: editing/execCommand/outdent-regular-blockquote.html

        * editing/IndentOutdentCommand.cpp:
        (WebCore::isIndentBlockquote): no longer checks whether a blockquote is created by WebKit or not.
        (WebCore::IndentOutdentCommand::outdentParagraph): takes care of the case enclosingBlockFlow == enclosingNode

LayoutTests:

2009-07-14  Ryosuke Niwa  <rniwa@google.com>

        Reviewed by Eric Seidel.

        Outdenting a line inside a blockquote tag does nothing
        https://bugs.webkit.org/show_bug.cgi?id=25315
        https://bugs.webkit.org/show_bug.cgi?id=25316

        The expected result for /editing/execCommand/outdent-selection-expected.html
        was rebaselined since the original expected result was wrong (Bug 25315).
        Namely, "ipsum" moved to the same paragraph as "more Lorem!"
        ("ipsum" was in the blockblock immediately below "more Lorem!")
        and "Dolor" was moved above the list items "Foo", "Bar", and "Baz".

        * editing/execCommand/outdent-regular-blockquote-expected.txt: Added.
        * editing/execCommand/outdent-regular-blockquote.html: Added.
        * platform/mac/editing/execCommand/outdent-selection-expected.checksum:
        * platform/mac/editing/execCommand/outdent-selection-expected.png:
        * platform/mac/editing/execCommand/outdent-selection-expected.txt:



Canonical link: https://commits.webkit.org/37516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45886 268f45cc-cd09-0410-ab3c-d52691b4dbfc